# viewscript

./: .gitignore  Cargo.toml  NPM_DEPLOY_PREP.md  SOFT_OVERRIDE_DEBUG.md  TEST.md  justfile  package.json  vs.md
.github/workflows/: ci.yml  llm-drift-check.yml  npm-publish.yml  vsc-wasm.yml
.vs-dev/: index.html
crates/vsc-cli/: Cargo.toml
crates/vsc-cli/src/: embedded_wasm.rs  main.rs
crates/vsc-cli/src/commands/: mod.rs
crates/vsc-cli/tests/: integration_harness.rs  run_command_path_entity.rs  search_command.rs  self_healing_agent.rs  target_management.rs
crates/vsc-cli/tests/fixtures/: path_with_fill.vscmd.yaml  stack_vertical.vscmd.yaml
crates/vsc-codl/: Cargo.toml
crates/vsc-codl/src/: ast.rs  error.rs  interpreter.rs  lib.rs  parser.rs  schema.rs  validator.rs
crates/vsc-core/: Cargo.toml
crates/vsc-core/proptest-regressions/: .gitkeep
crates/vsc-core/src/: buildinfo.rs  collision.rs  component.rs  config.rs  ffi.rs  lib.rs  optimizer.rs  proptest_checks.rs  regression_promoter.rs  scene.rs  schema.rs  solver.rs  target.rs  telemetry.rs  text.rs  types.rs  validator.rs
crates/vsc-core/src/algebra/: groebner.rs  mod.rs  monomial.rs  polynomial.rs
crates/vsc-core/src/analyzer/: jacobian.rs  mod.rs  rigidity.rs  singularity.rs
crates/vsc-core/src/codegen/: interactive.rs  js_codegen.rs  js_expr.rs  mod.rs
crates/vsc-ffi-c/: Cargo.toml  cbindgen.toml  viewscript.h
crates/vsc-ffi-c/src/: lib.rs
crates/vsc-gpu/: CANVAS2D_COVERAGE.md  Cargo.toml  FFI_ANALYSIS.md
crates/vsc-gpu/benches/: loop_blinn_bench.rs  sdf_stroke_bench.rs
crates/vsc-gpu/docs/: BENCHMARK_BASELINE.md
crates/vsc-gpu/src/: batcher.rs  lib.rs  opacity.rs  pipeline.rs  renderer.rs  scene_converter.rs  stencil.rs  tessellation.rs  transform.rs  web_target.rs
crates/vsc-gpu/src/loop_blinn/: convexity.rs  cubic.rs  mod.rs  tessellator.rs  vertex.rs
crates/vsc-gpu/src/rasterizer/: distribution.rs  mod.rs  rounding.rs  union_find.rs
crates/vsc-gpu/src/sdf_stroke/: cubic_tessellator.rs  cubic_vertex.rs  mod.rs  tessellator.rs  vertex.rs
crates/vsc-gpu/src/shaders/: gradient.wgsl  loop_blinn.wgsl  loop_blinn_cubic.wgsl  mod.rs  radial.wgsl  sdf_stroke.wgsl  sdf_stroke_cubic.wgsl  solid.wgsl  texture.wgsl
crates/vsc-launcher/: Cargo.toml
crates/vsc-launcher/embedded/: vsc-core.wasm.zst
crates/vsc-launcher/src/: main.rs
crates/vsc-linter/: Cargo.toml
crates/vsc-linter/src/: lib.rs  main.rs
crates/vsc-linter/src/checks/: cycle_detection.rs  float_contamination.rs  global_state.rs  locus_prohibition.rs  mod.rs  nonlinear_constraint.rs
crates/vsc-wasm/: Cargo.toml  DUAL_RENDERER_CHECK.md  test-engine.html  test-webgpu.html
crates/vsc-wasm/src/: ffi_bridge.rs  gpu.rs  lib.rs
docs/: ARCH_CONSTRAINTS.md  BENCHMARK_BASELINE.md  cosmic-text-investigation.md  index.md  install.sh  openapi.yaml
docs/commands/: add-component.md  add-constraint.md  add-entity.md  add-layout.md  add-object.md  api-search.md  apply-layout.md  build.md  check-when.md  check-where.md  check.md  dev.md  export-schema.md  generate-schema.md  help.md  init.md  optimize.md  patch-constraint.md  remove-constraint.md  run-command.md  search.md  status.md  style.md  target.md  update-metrics.md
docs/concepts/: box-model.md  codl.md  component.md  constraint-solver.md  ffi.md  p-dimension.md  q-dimension.md  render-target.md  scene-graph.md  t-dimension.md
docs/reference/: constraint.md  entity-id.md  fill-spec.md  path-command.md  path-segment.md  q-value.md  q-variable.md  rational.md  stroke-spec.md
lean4/ViewScript/: PathTypes.lean
rfc/lean/: ViewScriptRFC.lean  lakefile.toml
rfc/lean/ViewScriptRFC/: PDimension.lean
schemas/: constraint-collision-error.schema.json  path-entity.schema.json
styles/vs-style-chrome/: Cargo.toml
styles/vs-style-chrome/src/: lib.rs
tests/llm-drift/: drift-calculator.ts  executor.ts  run-drift-check.ts
tests/llm-drift/baselines/: card-grid.json  modal-dialog.json  nav-bar.json
tests/wasi-e2e/: deterministic_runner.sh  package.json  run_wasi_tests.sh  runner.mjs
