[package]
name = "vsc-codl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Constraint Operation Description Language (CODL) interpreter for ViewScript"

[dependencies]
vsc-core = { path = "../vsc-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
regex = "1.10"

[dev-dependencies]
pretty_assertions = "1.4"
