[package]
name = "vsc-linter"
version = "0.1.0"
edition = "2021"
description = "Static analysis linter for ViewScript mathematical integrity"
license = "MIT"

[[bin]]
name = "vsc-lint"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
