[package]
name = "vsc-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.wasm-pack.profile.release]
# Disable wasm-opt temporarily due to feature detection issues
# All modern browsers support bulk-memory and nontrapping-fptoint
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable GPU rendering via wgpu/WebGPU
gpu = ["vsc-gpu", "wgpu", "web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys", "console_error_panic_hook"]

[dependencies]
vsc-core = { path = "../vsc-core", features = ["text-shaping"] }
serde.workspace = true
serde_json.workspace = true

# GPU dependencies (optional, enabled by "gpu" feature)
vsc-gpu = { path = "../vsc-gpu", optional = true }
wgpu = { version = "23.0", optional = true, default-features = false, features = ["webgpu", "wgsl"] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "console",
    "Navigator",
    "Performance",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "GpuCanvasContext",
    "GpuTextureFormat",
    "GpuCanvasConfiguration",
    "GpuPowerPreference",
    "GpuRequestAdapterOptions",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASI-P1 compatible dependencies only (non-GPU path)

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
